# stable.fun

./: README.md
backend/: index.js  package.json
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx  stablebond.js
frontend/src/components/: About.jsx  DashboardCard.jsx  Footer.jsx  Hero.jsx  StablecoinsDashboard.jsx  TokenFactory.jsx
solana-program/: Anchor.toml  Cargo.toml  package-lock.json
solana-program/programs/stablecoin/src/: lib.rs
solana-program/tests/: my_solana_program.ts
