[package]
name = "my_solana_program"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[dependencies]
anchor-lang = "0.24.2"  # Match the Anchor CLI version
anchor-spl = "0.24.2"   # Use the same version as anchor-lang
solana-program = "1.9.29"  # Align with a compatible solana-program version
getrandom = { version = "0.2.15", default-features = false }

